--- a/web/view/cadastroAcao.twig
+++ b/web/view/cadastroAcao.twig
@@ -73,6 +73,10 @@
                             {% endfor %}
                         </select>
                     </div>
+                    <div class="form-group col-sm-1">
+                        <label for="horario">Horas</label>
+                        <input type="time" name="carga_horaria" class="form-control" placeholder="99" value="{% if acao is defined %}{{acao.cargaHoaria}}{% endif %}">
+                    </div>
                     <div class="form-group col-sm-2">
                         <label for="dia" class="form-check-label">Dia</label><br />
                         <select class="form-control" name="dia_semana" required>
@@ -82,7 +86,7 @@
                             {% endfor %}
                         </select>                        
                     </div>   
-                    <div class="form-group col-sm-10">
+                    <div class="form-group col-sm-9">
                         <label for="voluntario">Voluntário</label>
                         <select class="form-control" name="voluntario" required>
                             <option value="">Selecione</option>
@@ -135,9 +139,6 @@
                         <th class="col-sm-4">Ação</th>
                         <th class="col-sm-2">Início</th>
                         <th class="col-sm-4">Voluntário</th>
-                        <th class="col-sm-1 text-center">Alterar</th>
-                        <th class="col-sm-1 text-center">Excluir</th>
-                        <th class="col-sm-1 text-center">Certificado</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -147,9 +148,10 @@
                         <td>{{ acao.nome }}</td>
                         <td>{{ acao.inicio | date("d/m/Y") }}</td>
                         <td>{{ acao.voluntario.pessoa.nome }}</td>
-                        <td><center><a href="{{ path('acaoEditar',{'id':acao.id}) }}"><span class="glyphicon glyphicon-pencil"></span></a></center></td>
-                        <td><center><a href="{{ path('acaoExcluir',{'id':acao.id}) }}"><span class="glyphicon glyphicon-trash"></span></a></center></td>
-                        <td><center><a href="{{ path('acaoCertificar',{'acao':acao.id, 'voluntario':acao.voluntario.pessoa.id}) }}"><span class="glyphicon glyphicon-certificate"></span></a></center></td>
+                        <td><center><a data-toggle="tooltip" data-placement="top" title="Alteração" href="{{ path('acaoEditar',{'id':acao.id}) }}"><span class="glyphicon glyphicon-pencil"></span></a></center></td>
+                        <td><center><a data-toggle="tooltip" data-placement="top" title="Exclusão" href="{{ path('acaoExcluir',{'id':acao.id}) }}"><span class="glyphicon glyphicon-trash"></span></a></center></td>
+                        <td><center><a data-toggle="tooltip" data-placement="top" title="Certificado de Participação" href="{{ path('acaoCertificar',{'acao':acao.id, 'voluntario':acao.voluntario.pessoa.id}) }}"><span class="glyphicon glyphicon-certificate"></span></a></center></td>
+                        <td><center><a data-toggle="tooltip" data-placement="top" title="Termo do Voluntariado" href="{{ path('acaoAssinar',{'acao':acao.id, 'voluntario':acao.voluntario.pessoa.id}) }}"><span class="glyphicon glyphicon-file"></span></a></center></td>
                     </tr>
                     {% endfor %}
                     {% else %}
