--- a/web/view/certificadoParticipacao.twig
+++ b/web/view/certificadoParticipacao.twig
@@ -5,26 +5,21 @@
 
 {% block conteudo %}
     <!-- Main Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
-                <header>
-                    <h2 class="text-center"></span>&nbsp;Certificado de Participação</h2>
-                </header>
-                <p>
-                    A <b>Casa São José</b> inscrita sob o CNPJ: <b>999.999.0001/99</b>, presidida por 
-                    <b>Pe. Norbey Londono Buitrago</b> declara para os devidos fins que
-                    as informações abaixo são verdadeiras e dizem respeito ao ano de <b>2017</b>.
-                </p>
-            </div>
-        </div>        
-    </div>
+    <div class="container" style="border: 10px solid #000066; margin-top:10px; margin-bottom:5px; width:640px; height:640px">
+        <div class="text-center"><img src="{{ asset('logo_casa_sao_jose.jpg', 'img') }}"></div>
+        <header><h2 class="text-center">Certificado de Participação</h2></header>
+        <p>
+            Certificamos que <b>{{frequencia.turma.pessoa.nome}}</b> participou do curso <b>{{frequencia.turma.acao.nome}}</b> 
+            ministrado na Casa São José (Associação Cristã do Lago Norte - ACLN), Varjão, Brasília-DF, com carga horária de {{frequencia.turma.acao.cargaHoraria}} horas/aula.
+        </p>
+        <p class="text-center">Brasília, {{"now"|date("d/m/Y")}}</p>
+        <p class="text-center col-sm-4">____________ <br /> Presidente da ACLN</p>
+        <p class="text-center col-sm-4">____________ <br /> Diretor(a) Executivo(a)</p>
+        <p class="text-center col-sm-4">____________ <br /> Instrutor(a)</p>
+    </div>        
 {% endblock %}
 
 {% block rodape %}
-<p class="text-center">
-    Emitido por <b>Fulano de Tal</b> as 21:43 do dia 10/04/2018
-</p>
 {% endblock rodape %}
 
 {% block contato %}
