--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -46,7 +46,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Navegação</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="/">Início</a>
@@ -57,6 +57,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="{{ app.url_generator.generate('areaRestrita') }}">Área restrita</a>
+                    </li>
+                    <li>
+                        <a href="{{ app.url_generator.generate('nossoImpacto') }}">Nosso impacto</a>
                     </li>
                     <li>
                         <a href="{{ app.url_generator.generate('contato') }}">Contato</a>
@@ -76,9 +79,9 @@
             <div class="row">
                 <div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0">
                     <div class="site-heading">
-                        <h1>Social</h1>
+                        <h1>Casa São José</h1>
                         <hr class="small">
-                        <span class="subheading">Impacto social na prática</span>
+                        <span class="subheading">Uma entidade da Associação Cristã do Lago Norte - ACLN</span>
                     </div>
                 </div>
             </div>
@@ -100,19 +103,35 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p class="copyright text-muted">Faça parte da nossa comunidade</p>
+                <p class="copyright text-muted">Nossos contatos</p>
                 <ul class="list-inline text-center">
                     <li>
-                        <a href="https://www.facebook.com/impacto-social-na-pratica/">
+                        <a href="https://www.facebook.com/casa-sao-jose/">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                            </span>
+                            </span>Facebook
                         </a>
                     </li>
+                    <li>
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="glyphicon glyphicon-envelope fa-stack-1x fa-inverse"></i>
+                        </span>aclnsaojose13@gmail.com
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="glyphicon glyphicon-envelope fa-stack-1x fa-inverse"></i>
+                        </span>(61) 3468-1949 / 98642-1260
+                    </li>
+                    <li>
+                        <span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="glyphicon glyphicon-map-marker fa-stack-1x fa-inverse"></i>
+                        </span>Quadra 01 Conjunto D Lote 03, Varjão - DF
+                    </li>                    
                 </ul>
-                <p class="copyright text-muted">
-                <span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span>impacto@social.com</p>
             </div>
         </div>
     </div>
